Update TicketService.java